--- a/analysis/Calibration_model_milestone.Rmd
+++ b/analysis/Calibration_model_milestone.Rmd
@@ -5,32 +5,35 @@ date: "3/29/2019"
 output: html_document
 ---
 
-In this markdown document, we'll run through the creation of our models for the "historical" data from 5 NEON sites. We will model the ratio of bacteria and archaea (as one combined group) to fungi. Our current covariates are daily  precipitation and minimum daily temperature, both averaged to the month level.
+In this markdown document, we'll run through the creation of our dynamic linear models for the "historical" data from 5 NEON sites. We will model the ratio of bacteria and archaea (as one combined group) to fungi. Our current covariates are daily  precipitation and minimum daily temperature, both averaged to the month level.
 
 We have other covariates that describe each site, such as mean canopy height, and climate descriptors (MAP and MAT). We also have covariates such as pH, C:N ratio, and soil temperature, that we hope to include if we receive more data from NEON - in this historical time-series, we only have 1-3 values for each of these soil chemical or physical characteristics. 
 
-First, let's run the script that will download and aggregate our covariate data, and read in the output.
+First, let's run the script that will download and aggregate our covariate data, and read in the output. This will only run correctly if our working directory is the project directory - confirm that here:
 
 ```{r setup}
-
 knitr::opts_knit$set(root.dir = rprojroot::find_rstudio_root_file())
+#setwd("..")
 print(getwd())
+```
+Load directories
+```{r, include=FALSE,echo=FALSE}
 library(rjags)
 library(daymetr)
 library(zoo)
-library("ecoforecastR")
+library(ecoforecastR)
 library(dplyr)
-```
-```{r}
-source("data_construction/aggregate_calibration_data.R")
-
-### read in dataframe with response variable and covariates
-df <- readRDS("data/calibration_model_data.rds")
 ```
 
 Now, let's format our data object. First we'll look at the diagnostics for one of our sites, STER, in-depth. Later we'll loop through and look at the model fits for the other four sites.
 
 ```{r}
+# source file that downloads all of the data - only need to run once
+#source("data_construction/aggregate_calibration_data.R")
+
+### read in dataframe with response variable and covariates
+df <- readRDS("data/calibration_model_data.rds")
+
 # extract data from STER site
 site.data <- df[df$siteID=="STER",]
   y <- site.data$ratio
@@ -48,7 +51,7 @@ site.data <- df[df$siteID=="STER",]
   data[["Z"]] <- z
 ```
 
-Now let's set up our JAGS model code. We're including random effects for each sampling date
+Now let's set up our JAGS model code. We're including random effects for each sampling date, and fixed effects of minimum temperature and precipitation. This code is adapted from the JAGS output of ecoforecast::fit_dlm. 
 ```{r}
 
 ourmodel <- "model{
@@ -103,33 +106,38 @@ Here we run the model and assess convergence, and check whether parameters are c
   jags.out   <- coda.samples (model = j.model,
                               variable.names = c("tau_add","tau_obs", "beta_IC", "betaIntercept", "betaTmin",
                                                  "betaPrecip"),
-                              n.iter = 10000)
+                              n.iter = 20000)
+  # view trace plots
   plot(jags.out)
   
+  # check psrf scores; we want these to be under 1.1
   gelman.diag(jags.out)
+  
+  # plot correlation matrix of all of our parameters
   out <- as.matrix(jags.out)
   pairs(out)
 ```
-All values are less than 1.05, so the model looks like it has converged. Now we'll run it again, monitoring the "x" variable this time. 
+All values are less than 1.05, so the model looks like it has converged. The plot of correlations shows that precipitation and temperature are negatively correlated, which isn't surprising, as they're both climatic variables. BetaIntercept is also correlated with most of the other betas. Now we'll run it again, monitoring the "x" variable this time. 
   
 ```{r}  
   jags.out   <- coda.samples (model = j.model,
                               variable.names = c("x","tau_add",
                               "tau_obs", "beta_IC", "betaIntercept", 
                               "betaTmin", "betaPrecip","tau_alpha","alpha"),
-                              n.iter = 10000)
+                              n.iter = 20000)
 ```
 Let's visualize the model fit. This site has 10 dates, but other sites have even fewer, so this will likely be our best-fitting model.
 ```{r}
 
   # plot fit with confidence interval
   time.rng = c(1,length(time)) ## adjust to zoom in and out
+  out <- as.matrix(jags.out)
   x.cols <- grep("^x",colnames(out)) ## grab all columns that start with the letter x
   ci <- apply(exp(out[,x.cols]),2,quantile,c(0.025,0.5,0.975)) ## model was fit on log scale
   
   plot(time, ci[2,], type='n', ylim=range(y,na.rm=TRUE), ylab="", 
        log='y', xlim=time[time.rng], xaxt="n", 
-       main=paste0("Time-series for ",sites[s]))
+       main="Time-series for STER")
   mtext(text = "Bacteria+Archaea : Fungi", side=2, line=2,cex=0.6)
   
   ## adjust x-axis labels
@@ -145,6 +153,7 @@ Now let's view all 5 sites together! We have to run this for more iterations, ot
 
 par(mfrow=c(5,1), mar=c(1.7,3.1,1.5,1.1), mgp=c(3,.6,0))
 # loop through all 5 sites
+sites <- c("DSNY", "HARV", "OSBS", "CPER", "STER")
 for(s in 1:length(sites)) {
 
   site.data <- df[df$siteID==sites[s],]
@@ -165,10 +174,14 @@ for(s in 1:length(sites)) {
   
   j.model   <- jags.model (file = textConnection(ourmodel),
                            data = data,
-                          # inits = init,
                            n.chains = 3)
   
-  
+  jags.out   <- coda.samples (model = j.model,
+                              variable.names = c("tau_add","tau_obs", "beta_IC", "betaIntercept", "betaTmin",
+                                                 "betaPrecip"),
+                              n.iter = 80000)
+    print(gelman.diag(jags.out)) # check psrf scores for each model
+
   jags.out   <- coda.samples (model = j.model,
                               variable.names = c("x","tau_add",
                               "tau_obs", "beta_IC", "betaIntercept", 
@@ -176,10 +189,9 @@ for(s in 1:length(sites)) {
                               "tau_alpha","alpha"),
                               n.iter = 80000)
   
-  print(gelman.diag(jags.out))
-  
+
   # plot fit with confidence interval
-  time.rng = c(1,length(time)) ## adjust to zoom in and out
+  time.rng = c(1,length(time)) 
   out <- as.matrix(jags.out)
   x.cols <- grep("^x",colnames(out)) ## grab all columns that start with the letter x
   ci <- apply(exp(out[,x.cols]),2,quantile,c(0.025,0.5,0.975)) ## model was fit on log scale
