--- a/analysis/Calibration_model_milestone.Rmd
+++ b/analysis/Calibration_model_milestone.Rmd
@@ -45,9 +45,9 @@ site.data <- df[df$siteID=="STER",]
   time <- as.Date(time, format="%Y-%m")
   
   # set up data object
-  z <- cbind(rep(1,length(y)), site.data$min_temp.C_avg, site.data$precip.mm_avg)
-  colnames(z) <- c("betaIntercept", "betaTmin", "betaPrecip")
-  data <- list(y=log(y),n=length(y), x_ic = 0,tau_ic = 0.00001,a_obs=0.1,
+  z <- cbind(rep(1,length(OBS)), site.data$min_temp.C_avg, site.data$precip.mm_avg, site.data$pH, site.data$litterDepth)
+  colnames(z) <- c("betaIntercept", "betaTmin", "betaPrecip","betapH", "betaLitter")
+  data <- list(OBS=log(y),n=length(y), x_ic = 0,tau_ic = 0.00001,a_obs=0.1,
                 r_obs=0.1,a_add=0.1,r_add=0.1)
   data[["Z"]] <- z
 ```
@@ -55,42 +55,49 @@ site.data <- df[df$siteID=="STER",]
 Now let's set up our JAGS model code. We're including random effects for each sampling date, and fixed effects of minimum temperature and precipitation. This code is adapted from the JAGS output of ecoforecast::fit_dlm. In the missing data model, we pull from distributions of our covariates; precipitation has a gamma distribution, because we can't have negative values, but temperature has a Normal distribution because negative values are fine. We have uninformative precisions drawn from a gamma distribution with shape and rate of 0.1.
 ```{r}
 
-ourmodel <- "model{
-
+ourmodel <- "  model{
+  
 #### Priors
 x[1] ~ dnorm(x_ic,tau_ic)
 tau_obs ~ dgamma(a_obs,r_obs)
 tau_add ~ dgamma(a_add,r_add)
 
 #### Random Effects
-tau_alpha~dgamma(0.1,0.1)
-for(i in 1:n){
-alpha[i]~dnorm(0,tau_alpha)
-}
+  tau_alpha~dgamma(0.1,0.1)
+  for(i in 1:n){                  
+  alpha[i]~dnorm(0,tau_alpha)
+  }
 
 #### Fixed Effects
 beta_IC~dnorm(0,0.001)
 betaIntercept~dnorm(0,0.001)
 betaTmin~dnorm(0,0.001)
 betaPrecip~dnorm(0,0.001)
-
+#betapH~dnorm(0,0.001)
+betaLitter~dnorm(0,0.001)
 muTmin~dnorm(0,0.001)
-muPrecip~dgamma(0.01,0.01)
-
+muPrecip~dnorm(0,0.001)
+#mupH~dnorm(0,0.001)
+muLitter~dnorm(0,0.001) 
 tauTmin~dgamma(0.01,0.01)
 tauPrecip~dgamma(0.01,0.01)
+#taupH~dgamma(0.01,0.01)
+ tauLitter~dgamma(0.01,0.01)
 
 #### Data Model
 for(t in 1:n){
-y[t] ~ dnorm(x[t],tau_obs)
-# missing data model:
+OBS[t] ~ dnorm(x[t],tau_obs)
 Z[t,2] ~ dnorm(muTmin,tauTmin)
 Z[t,3] ~ dnorm(muPrecip,tauPrecip)
+#Z[t,4] ~ dnorm(mupH,taupH)
+Z[t,5] ~ dnorm(muLitter,tauLitter)
 }
 
 #### Process Model
 for(t in 2:n){
-mu[t] <- beta_IC*x[t-1]  + betaIntercept*Z[t,1] + betaTmin*Z[t,2] + betaPrecip*Z[t,3] + alpha[t[i]]
+mu[t] <- beta_IC*x[t-1]  + betaIntercept*Z[t,1] + betaTmin*Z[t,2] + betaPrecip*Z[t,3] + betaLitter*Z[t,5] + alpha[t[i]]
+#betapH*Z[t,4] + 
+
 x[t]~dnorm(mu[t],tau_add)
 }
 
@@ -106,17 +113,18 @@ Here we run the model and assess convergence, and check whether parameters are c
   
   jags.out   <- coda.samples (model = j.model,
                               variable.names = c("tau_add","tau_obs", "beta_IC", "betaIntercept", "betaTmin",
-                                                 "betaPrecip"),
+                                                 "betaPrecip", #"betapH", 
+                                                 "betaLitter"),
                               n.iter = 30000)
   # view trace plots
-  plot(jags.out)
+  #plot(jags.out)
   
   # check psrf scores; we want these to be under 1.1
   gelman.diag(jags.out)
   
   # plot correlation matrix of all of our parameters
   out <- as.matrix(jags.out)
-  pairs(out)
+  #pairs(out)
 ```
 
 All values are less than 1.05, so the model looks like it has converged. The plot of correlations shows that precipitation and temperature are negatively correlated, which isn't surprising, as they're both climatic variables. BetaIntercept is also correlated with most of the other betas. Now we'll run it again, monitoring the "x" variable this time, along with the random year effects. 
@@ -136,7 +144,7 @@ Let's visualize the model fit. This site has 10 dates, but other sites have even
   time.rng = c(1,length(time)) ## adjust to zoom in and out
   out <- as.matrix(jags.out)
   x.cols <- grep("^x",colnames(out)) ## grab all columns that start with the letter x
-  ci <- apply(exp(out[,x.cols]),2,quantile,c(0.025,0.5,0.975)) ## model was fit on log scale
+  ci <- apply(exp(out[,x.cols]),2,quantile,c(0.025,0.5,0.975),na.rm=TRUE) ## model was fit on log scale
   
   plot(time, ci[2,], type='n', ylim=range(y,na.rm=TRUE), ylab="", 
        log='y', xlim=time[time.rng], xaxt="n", 
@@ -169,9 +177,10 @@ for(s in 1:length(sites)) {
   time <- as.Date(time, format="%Y-%m")
   
    # set up data object
-  z <- cbind(rep(1,length(y)), site.data$min_temp.C_avg, site.data$precip.mm_avg)
-  colnames(z) <- c("betaIntercept", "betaTmin", "betaPrecip")
-  data <- list(y=log(y),n=length(y), x_ic = 0,tau_ic = 0.00001,a_obs=0.1,
+   z <- cbind(rep(1,length(y)), site.data$min_temp.C_avg, site.data$precip.mm_avg, site.data$pH, site.data$litterDepth)
+  colnames(z) <- c("betaIntercept", "betaTmin", "betaPrecip","betapH", 
+                   "betaLitter")
+  data <- list(OBS=log(y),n=length(y), x_ic = 0,tau_ic = 0.00001,a_obs=0.1,
                 r_obs=0.1,a_add=0.1,r_add=0.1)
   data[["Z"]] <- z
   
@@ -180,17 +189,18 @@ for(s in 1:length(sites)) {
                            data = data,
                            n.chains = 3)
   
-  jags.out   <- coda.samples (model = j.model,
-                              variable.names = c("tau_add","tau_obs", "beta_IC", "betaIntercept", "betaTmin",
-                                                 "betaPrecip"),
-                              n.iter = 80000)
+  # jags.out   <- coda.samples (model = j.model,
+  #                             variable.names = c("tau_add","tau_obs", "beta_IC", "betaIntercept", "betaTmin",
+  #                                                "betaPrecip"),
+  #                             n.iter = 80000)
   print(paste0("Model diagnostics for site: ", sites[s]))
-  print(gelman.diag(jags.out)) # check psrf scores for each model
+  #print(gelman.diag(jags.out)) # check psrf scores for each model
 
   jags.out   <- coda.samples (model = j.model,
                               variable.names = c("x","tau_add",
                               "tau_obs", "beta_IC", "betaIntercept", 
-                              "betaTmin", "betaPrecip",
+                              "betaTmin", "betaPrecip", #"betapH", 
+                              "betaLitter",
                               "tau_alpha","alpha"),
                               n.iter = 100000)
   
